--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ebebeb;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.continer {
+  padding: 2rem;
+}
+
+.button-secondary {
+  background-color: #db2777;
+  color: white;
+}
+
+.button-primary {
+  background-color: #0891b2;
+  color: white;
+}
+
+/* cardbutton */
+/* Generic Styles */
+
+/* * {
+  box-sizing: border-box;
+}
+
+h3,
+p {
+  margin: 0;
+}
+
+.cart {
+  margin: 2rem auto;
+  max-width: 500px;
+  background-color: white;
+  padding: 2rem;
+}
+
+.cart img {
+  width: 4.8rem;
+  height: 4.8rem;
+  object-fit: cover;
+}
+
+.desc span {
+  color: #777;
+  font-size: 0.8rem;
+}
+
+.cart input {
+  margin-top: 0.2rem;
+  padding: 4px 8px;
+  border: solid 1px #999;
+}
+
+.price {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+/* Generic Styles End */
+
+/* .cart {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  gap: 2rem 1rem;
+  justify-content: space-between;
+}
+
+.price {
+  text-align: right;
+} */
