Define axios for request of products. by use Hooks  and change some UI.

--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,13 @@ code {
     monospace;
 }
 
-.navProd {
-  color: white;
-  font-size: 33rem;
-}
-
 a:hover {
   text-decoration: none;
   color: white;
 }
-
+.bg-warning {
+  margin-left: 5px;
+}
 .continer {
   padding: 2rem;
 }
