--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ebebeb;
+  background-color: #f9fafb;
 }
 
 code {
@@ -55,11 +55,17 @@ a:hover {
   padding: 3rem;
 }
 
+.card {
+  background-color: white;
+  box-shadow: 10px 10px 49px -17px rgba(23, 23, 23, 0.2);
+}
 .card-body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  /* border: 1px solid red; */
+}
+.uk-navbar-container {
+  background: #f1f5f9;
 }
 
 .navlinke-button-secondary {
@@ -74,56 +80,57 @@ a:hover {
   background-color: #0891b2;
   color: white;
 }
-/* cardbutton */
-/* Generic Styles */
 
-/* * {
-  box-sizing: border-box;
+#product {
+  font-size: 1.2rem;
+  color: black;
+  padding-top: 11px;
 }
 
-h3,
-p {
-  margin: 0;
+#search {
+  padding: 1.3rem 1.1rem;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: solid 1px #94a3b8;
 }
 
-.cart {
-  margin: 2rem auto;
-  max-width: 500px;
-  background-color: white;
+#registration_form {
+  max-width: 40rem;
+  margin: auto;
+  /* border: solid 1px #ddd; */
+  border: none;
+}
+
+#registration_form .card-body {
   padding: 2rem;
 }
 
-.cart img {
-  width: 4.8rem;
-  height: 4.8rem;
-  object-fit: cover;
+#registration_form input {
+  padding: 0.6rem;
+  border: solid 1px #bbb;
+  border-radius: 5px;
+  width: 100%;
+  resize: none;
+  color: #333;
 }
 
-.desc span {
-  color: #777;
-  font-size: 0.8rem;
+#registration_form input:hover {
+  border: 2px solid #0891b2;
 }
 
-.cart input {
-  margin-top: 0.2rem;
-  padding: 4px 8px;
-  border: solid 1px #999;
-}
-
-.price {
-  font-size: 1.2rem;
+#registration_form label {
   font-weight: bold;
 }
 
-/* Generic Styles End */
-
-/* .cart {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  gap: 2rem 1rem;
-  justify-content: space-between;
+#registration_form button {
+  border: none;
+  padding: 0.75rem 16rem;
+  margin-top: 2rem;
+  border: 1px solid #ff5574;
+  border-radius: 30px;
+  background-color: #ff5574;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
-
-.price {
-  text-align: right;
-} */
