validateing a form Using Joi library.

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,19 @@ a:hover {
   font-weight: bold;
 }
 
+.btn-outline-cart {
+  background-color: rgb(221, 71, 98);
+  color: white;
+  font-size: 1rem;
+}
+.btn-outline-cart:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid #db2777;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
 .btn-color:hover {
   color: white;
 }
