--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,15 @@ a:hover {
   text-align: center;
   padding-bottom: 2rem;
 }
+
+.alerts {
+  background: #ff5574;
+}
+.alerts h3 {
+  color: white;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.alerts .btn-close {
+  font-size: 1.7rem;
+}
